refactor: Apply .main-header class style instead of <header> tag style

--- a/Linkbrary/src/scss/layouts/_header.scss
+++ b/Linkbrary/src/scss/layouts/_header.scss
@@ -1,5 +1,5 @@
 @use "../abstracts" as a;
-header {
+.main-header {
   width: 100%;
   max-width: 1920px;
   position: sticky;
@@ -30,7 +30,7 @@ header {
 }
 
 @media (max-width: 767px) {
-  header {
+  .main-header {
     padding: 13px 32px;
 
     .sign-logo {
