refactor(mentor): 불필요한 초기화 속성 삭제

--- a/css/signin.css
+++ b/css/signin.css
@@ -67,9 +67,9 @@ label {
   color: black;
   font-family: Pretendard;
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
+  /* font-style: normal;
+  line-height: normal; */
 }
 
 input {
