--- a/css/pages/auth.css
+++ b/css/pages/auth.css
@@ -1,15 +1,4 @@
-:root{
-  --Linkbrary-bg: #F0F6FF;
-  --Linkbrary-primary-color: #6D6AFE;
-  --Linkbrary-gray10: #E7EFFB;
-  --Linkbrary-gray20: #CCD5E3;
-  --Linkbrary-white: #FFF;
-  --gra-purpleblue-to-skyblue: linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
-}
-
-*{
-  box-sizing: border-box;
-}
+@import "../globals.css";
 
 body{
   background: var(--Linkbrary-bg, #F0F6FF);
@@ -44,7 +33,7 @@ body{
   gap: 8px;
   color: var(--black, #000);
   font-family: Pretendard;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 150% */
@@ -53,7 +42,7 @@ body{
 .auth-header__btn{
   color: var(--Linkbrary-primary-color, #6D6AFE);
   font-family: Pretendard;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -83,7 +72,7 @@ body{
 .auth-form__input-group label{
   color: var(--black, #000);
   font-family: Pretendard;
-  font-size: 14px;
+  font-size: .875rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -113,7 +102,6 @@ body{
 .auth-form__password-toggle-btn{
   border: none;
   background: none;
-  cursor: pointer;
   padding: 0;
 }
 
@@ -136,11 +124,10 @@ body{
   border-style: none;
   color: var(--Grey-Light, #F5F5F5);
   font-family: Pretendard;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  cursor: pointer;
 }
 
 .social-auth{
