--- a/css/sign.css
+++ b/css/sign.css
@@ -73,8 +73,7 @@ input:focus {
   outline:1px solid var(--Linkbrary-primary-color, #6D6AFE);
 }
 
-.input-password{
-  position: relative;
+.password-input{
   display: flex;
   justify-content: center;
   align-items: center;
