충돌파일 수정

--- a/css/pages/auth.css
+++ b/css/pages/auth.css
@@ -99,20 +99,60 @@ body{
   position: relative;
 }
 
-.auth-form__password-toggle-btn{
+.auth-form__password-toggle-btn,
+.auth-form__password-toggle-btn.confirm{
   border: none;
   background: none;
   padding: 0;
 }
 
-.auth-form__password-icon{
+.auth-form__password-icon,
+.auth-form__password-icon.confirm{
   position: absolute;
   top: 18px;
   right: 15px;
   bottom: 18px;
 }
 
-.auth-btn{
+.auth-form__wrong-email{
+  display: flex;
+  width: 400px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 6px;
+  color: var(--Linkbrary-gray100, #373740);
+  /* Linkbrary/body1-regular */
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+}
+
+.auth-form__input-group .auth-form__error-sign{
+  border: 1px solid var(--Linkbrary-red, #FF5B56);
+}
+
+.auth-form__wrong-email{
+  color: var(--Linkbrary-red, #FF5B56);
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.auth-form__wrong-password,
+.auth-form__wrong-password.confirm{
+  color: var(--Linkbrary-red, #FF5B56);
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.auth-form__auth-btn{
   display: flex;
   width: 400px;
   padding: 16px 20px;
@@ -198,7 +238,7 @@ main{
 .auth-form__group,
 .auth-form__input-group,
 .auth-form__input-group input,
-.auth-btn,
+.auth-form__auth-btn,
 .social-auth{
   width: 100%;
   max-width: 400px;
@@ -208,6 +248,4 @@ main{
 .social-auth{
   align-items: center;
 }
-
 }
-  
