--- a/Linkbrary/src/scss/just-for-fun/blackJack.scss
+++ b/Linkbrary/src/scss/just-for-fun/blackJack.scss
@@ -8,6 +8,11 @@ body {
   color: red;
 }
 
+button {
+  padding: 5px;
+  font-size: 20px;
+}
+
 .card {
   width: 80px;
   height: 100px;
@@ -22,6 +27,7 @@ main {
   @include a.flex(column, flex-start, center);
   width: 100%;
   .game-board {
+    max-width: 700px;
     width: 80%;
     aspect-ratio: 4/3;
     border-radius: 30px;
