--- a/Linkbrary/src/scss/just-for-fun/blackJack.scss
+++ b/Linkbrary/src/scss/just-for-fun/blackJack.scss
@@ -2,6 +2,8 @@
 body {
   width: 100%;
   height: 100%;
+  max-width: 800px;
+  @include a.flex(column, flex-start, center);
 }
 
 .red-suit {
@@ -11,6 +13,10 @@ body {
 button {
   padding: 5px;
   font-size: 20px;
+  @media (max-width: 767px) {
+    padding: 2px;
+    font-size: 15px;
+  }
 }
 
 .card {
@@ -27,7 +33,6 @@ main {
   @include a.flex(column, flex-start, center);
   width: 100%;
   .game-board {
-    max-width: 700px;
     width: 80%;
     aspect-ratio: 4/3;
     border-radius: 30px;
