--- a/assets/CSS/sign.css
+++ b/assets/CSS/sign.css
@@ -179,3 +179,12 @@ body {
   position: absolute;
   /* z-index: 1; */
 }
+
+.error_message {
+  color: var(--Linkbrary-red, #FF5B56);
+  font-family: Pretendard;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
