--- a/Linkbrary/src/scss/just-for-fun/blackJack.scss
+++ b/Linkbrary/src/scss/just-for-fun/blackJack.scss
@@ -2,7 +2,8 @@
 body {
   width: 100%;
   height: 100%;
-
+  background-color: #444;
+  color: #fff;
   @include a.flex(column, flex-start, center);
 }
 
@@ -13,6 +14,8 @@ body {
 button {
   padding: 5px;
   font-size: 20px;
+  background-color: #222;
+  color: rgb(251, 255, 160);
   @media (max-width: 767px) {
     padding: 2px;
     font-size: 15px;
@@ -20,13 +23,16 @@ button {
 }
 
 .card {
-  width: 80px;
-  height: 100px;
+  width: 25%;
+  aspect-ratio: 4/5;
+  background-color: #fff;
   border: 2px solid #33f;
+  color: #000;
   @include a.flex(column, center, center);
 }
 .card-list {
   @include a.flex(row, center, center);
+  width: 100%;
 }
 
 main {
@@ -34,17 +40,19 @@ main {
   @include a.flex(column, flex-start, center);
   width: 100%;
   .game-board {
+    background-color: #367558;
+    color: #fff;
     width: 80%;
     aspect-ratio: 4/3;
     border-radius: 30px;
-    border: 3px solid #aaf;
+    border: 3px solid #fff;
     @include a.flex(column, center, center);
     gap: 5%;
     .board {
       width: 90%;
       height: 40%;
       border-radius: 30px;
-      border: 3px solid #aaf;
+      border: 3px solid #fff;
     }
 
     .dealer {
@@ -65,7 +73,7 @@ main {
   .controller {
     width: 80%;
     aspect-ratio: 4/1;
-    border-radius: 30px;
+
     border: 3px solid #aaf;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
