4주차 기능 구현

--- a/index.css
+++ b/index.css
@@ -1,14 +1,13 @@
-* {
-  box-sizing: border-box;
-  font-family: Pretendard;
-}
+@import "./styles/color.css";
+@import "./styles/comon.css";
+@import "./styles/ui.css";
 
-body {
+/*body {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0;
-}
+}*/
 
 nav {
   width: 100%;
@@ -16,7 +15,7 @@ nav {
   justify-content: center;
   position: sticky;
   top: 0;
-  background-color: #F0F6FF;
+  background-color: var(--background);
   z-index: 2;
 }
 
@@ -26,14 +25,12 @@ nav {
   align-items: center;
   width: 100%;
   height: 94px;
-  max-width: 1920px;
-  padding: 0 200px;
 }
 
 .gnb-logo {
   width: 133px;
   height: 24px;
-  color: #6D6AFE;
+  color: var(--primary);
   font-weight: 800;
   text-decoration-line: none;
 }
@@ -41,10 +38,8 @@ nav {
 .gnb-button {
   width: 128px;
   height: 53px;
-  border: none;
   padding: 16px 20px;
-  border-radius: 8px;
-  background-image: linear-gradient(90.99deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
+  background-image: linear-gradient(90.99deg, var(--primary) 0.12%, #6AE3FE 101.84%);
   color: #F5F5F5;
   font-size: 18px;
   font-weight: 600;
@@ -59,43 +54,34 @@ header {
   overflow: hidden;
 }
 
-.maincontents-heading {
+.maincontents {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 40px;
   padding-top: 70px;
+  padding-bottom: 40px;
 }
 
-.slogan{
+.maincontents_slogan{
   font-weight: 700;
   font-size: 64px;
   line-height: 80px;
   text-align: center;
 }
-  
-#maincontents-text-purple-to-pink {
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(91.26deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
-}
 
-.maincontents-goto-signup {
+.maincontents_button-group {
   display: flex;
   justify-content: center;
 }
 
-.goto-signup-link {
+.maincontents_button-group_button {
   position: relative;
   inset: 0;
   width: 350px;
   height: 53px;
   z-index: 1;
   gap: 10px;
-  border-radius: 8px;
-  border: none;
-  background-image: linear-gradient(90.99deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
+  background-image: linear-gradient(90.99deg, var(--primary) 0.12%, #6AE3FE 101.84%);
   font-size: 18px;
   font-weight: 600;
   line-height: 21px;
@@ -116,7 +102,7 @@ header {
   width: 1118px;
   height: 659px;
   border-radius: 25px;
-  background-color: #F0F6FF;
+  background-color: var(--background);
   box-shadow: 0 4px 25px #00000014;
 }
 
@@ -152,7 +138,7 @@ section:nth-of-type(even) {
   /550px 291px;
 }
 
-.title {
+.section_title {
   grid-area: title;
   font-size: 48px;
   font-weight: 700;
@@ -160,7 +146,7 @@ section:nth-of-type(even) {
   margin: 0;
 }
 
-.section_text_discription {
+.section_text_description {
   grid-area: description;
   font-size: 16px;
   font-weight: 400;
@@ -172,35 +158,6 @@ section:nth-of-type(even) {
   grid-area: image;
   width: 550px;
   height: 450px;
-}
-
-
-#textcolor-pink-to-blue {
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(95.63deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
-}
-
-#textcolor-yellow-to-blue {
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(277.01deg, #6FBAFF 59.22%, #FFD88B 93.66%);
-}
-
-#textcolor-purple-to-blue {
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(99.5deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);  
-}
-
-#textcolor-blue-to-purple {
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(271.36deg, #FE578F -9.84%, #68E8F9 107.18%);
 }
 
 footer {
@@ -238,9 +195,9 @@ footer {
 }
 
 .icons {
-    display: flex;
-    column-gap: 12px;
-    height: 20px;
+  display: flex;
+  column-gap: 12px;
+  height: 20px;
 }
 
 footer a {
@@ -256,21 +213,15 @@ footer a {
 }
 
 footer i {
-  color: #FFFFFF;
+  color: var(--white);
 }
 
 /*태블릿 사이즈*/
 
 @media (max-width: 1199px) {
 
-  /*nav{
+  nav{
     padding: 0 32px;
-  }*/
-
-  .gnb {
-    margin: 0;
-    padding: 13px auto;
-    min-width: 800px;
   }
 
   header {
@@ -285,8 +236,6 @@ footer i {
     height: 240px;
     line-height: 80px;
   }
-
-  
 
   .goto-signup-link {
     width: 350px;
@@ -357,18 +306,9 @@ footer i {
   }
 }
 
-
-
 /*Mobile 사이즈*/
 
 @media (max-width: 767px) {
-
-  .gnb {
-    margin: 0;
-    padding: 13px 32px;
-    width: 100%;
-    min-width: 400px;
-  }
 
   header {
     flex-direction: column;
