--- a/signin/sign.css
+++ b/signin/sign.css
@@ -1,13 +1,17 @@
-* {
-  box-sizing: border-box;
-}
+@import "../styles/color.css";
+@import "../styles/comon.css";
+@import "../styles/ui.css";
 
-@font-face {
+/** {
+  box-sizing: border-box;
+}*/
+
+/*@font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   weight: 700;
   font-style: normal;
-}
+}*/
 
 html {
   font-family: 'Pretendard-Regular', sans-serif;
@@ -16,7 +20,7 @@ html {
 
 body {
   padding-top: 238px;
-  background-color: #F0F6FF;
+  background-color: var(--background);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -57,10 +61,10 @@ header {
   font-size: 16px;
   font-weight: 600;
   line-height: 19.09px;
-  color: #6D6AFE;
+  color: var(--primary);
 }
 
-.signin-box {
+.sign-box {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -68,26 +72,26 @@ header {
   gap: 32px;
 }
 
-.signin-form {
+.sign-form {
   display: flex;
   flex-direction: column;
   gap: 30px;
   width: 100%;
 }
 
-.signin-inputs {
+.sign-form-inputs {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 
-.signin-input-box {
+.sign-form-inputs-box {
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
 
-.signin-input-label {
+.sign-input-label {
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -96,16 +100,13 @@ header {
   color: #000000;
 }
 
-.signin-input {
+input {
   width: 400px;
   height: 60px;
   padding: 18px, 15px;
   border-radius: 8px;
-  border: 1px solid #6D6AFE;
-}
-
-.signin-input:focus {
-  outline: 1px solid blue;
+  border: 1px solid var(--primary);
+  outline: none;
 }
 
 .sign-password {
@@ -118,24 +119,21 @@ header {
   right: 30px;
   width: 30px;
   height: 30px;
-  background-color: #FFFFFF;
-  border: none;
+  background-color: var(--background);
 }
 
-.cta {
+.login-button {
   height: 53px;
-  border-radius: 8px;
-  border: none;
   padding: 16px 20px;
   gap: 10px;
-  background-image: linear-gradient(90.99deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
+  background-image: linear-gradient(90.99deg, var(--primary) 0.12%, #6AE3FE 101.84%);
   color: #F5F5F5;
   font-weight: 600;
   font-size: 18px;
   line-height: 21.48px;
 }
 
-.sns-box {
+.social-login_group {
   display: flex;
   width: 400px;
   height: 66px;
@@ -143,27 +141,36 @@ header {
   border-radius: 8px;
   justify-content: space-between;
   align-items: center;
-  background-color: #E7EFFB;
-  border: 1px solid #CCD5E3
+  background-color: var(--gray10);
+  border: 1px solid var(--gray20);
 }
 
-.sns-text {
+.social-login-text {
   font-weight: 400;
   font-size: 14px;
   line-height: 16.71px;
   color: #373740;
 }
 
-.sns-links {
+.social-login-buttons {
   width: 100px;
   height: 42px;
   gap: 16px;
 }
 
-.sns-link {
+.social-login-button {
   width: 42px;
   height: 42px;
   border-radius: 50%;
+}
+
+.error-message-email,
+.error-message-password {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color: #FF5B56;
+  line-height: 16.71px;
 }
 
 /*태블릿 사이즈*/
