Changed signin page
To align items center of the browser, applied 'flex' instead of 'margin'

--- a/signin/style-signin.css
+++ b/signin/style-signin.css
@@ -1,27 +1,32 @@
+* {
+  box-sizing: border-box;
+}
 
 body {
   background: var(--grey-1);
 }
 
-section {
-  box-sizing: content-box;
-  margin: 200px auto 250px;
-  width: 100%;
-  max-width: 400px;
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100dvh;
 }
 
-.logo {
-  display: block;
-  margin: 0 auto;
+.content {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.logo > img {
+.logo {
   width: 240px;
 }
 
 .form {
-  margin: 30px auto;
+  width: 100%;
 }
 
 .text {
@@ -50,7 +55,6 @@ input {
   width: 100%;
   padding: 18px 15px;
   border: 1px solid var(--grey-3);
-  margin: 0;
   border-radius: 8px;
   background: var(--white);
 }
@@ -65,17 +69,19 @@ input:focus {
 
 .eye {
   position: absolute;
-  top: 18px;
+  top: 50%;
   right: 15px;
+  transform: translate(-50%,-50%);
 }
 
 
 .signin_buttons {
-  padding: 16px 20px;
+  width: 100%;
+  padding: 16px 15px;
   /* width: 128px; */
   border-radius: 8px;
   background: linear-gradient(91deg, #6d6afe 0.12%, #6AE3FE 101.84%) ;
-  width: 100%;
+
   border: none;
   margin-top: 30px;
   
@@ -95,9 +101,10 @@ input:focus {
 }
 
 .social {
-  display: flex;
   width: 100%;
   padding: 3px 24px;
+  margin-top: 32px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 
@@ -106,16 +113,22 @@ input:focus {
   background: var(--grey-2);
 }
 
-.social-container {
+.icons {
   display: flex;
-  justify-content: space-between;
+  align-items:center;
   gap: 10px;
-  align-items: center;
 }
 
-@media (min-width: 767px) {
-  section {
-    margin: 120px auto 233px;
-    padding: 0 32px;
+@media (max-width: 767px) {
+  .content {
+    width: 100%;
+    max-width: 400px;
+    margin-right: 32px;
+    margin-left: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
+
