이메일 input에서 focus out 할 때, 값이 없을 경우 아래에 “이메일을 입력해 주세요.” 에러 메세지를 보임

--- a/assets/css/commons/shared.css
+++ b/assets/css/commons/shared.css
@@ -10,6 +10,10 @@
   font-size: 1.125rem;
 }
 
+.auth-form__input.input-border--red {
+  border: 1px solid var(--red-color);
+}
+
 @media (max-width: 767px) {
  
   .pc-br {
