--- a/signup/style-signup.css
+++ b/signup/style-signup.css
@@ -1,27 +1,34 @@
+* {
+  box-sizing: border-box;
+}
+
 
 body {
   background: var(--grey-1);
 }
 
-section {
-  box-sizing: content-box;
-  margin: 200px auto 250px;
-  width: 100%;
-  max-width: 400px;
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100dvh;
 }
 
-.logo {
-  display: block;
-  margin: 0 auto;
+.content {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.logo > img {
+
+.logo {
   width: 210px;
 }
 
 .form {
-  margin: 30px auto;
+  width: 100%;
 }
 
 .text {
@@ -50,7 +57,6 @@ input {
   width: 100%;
   padding: 18px 15px;
   border: 1px solid var(--grey-3);
-  margin: 0;
   border-radius: 8px;
   background: var(--white);
 }
@@ -66,8 +72,9 @@ input:focus {
 
 .eye {
   position: absolute;
-  top: 18px;
+  top: 50%;
   right: 15px;
+  transform: translate(-50%,-50%);
 }
 
 
@@ -96,9 +103,9 @@ input:focus {
 }
 
 .social {
-  display: flex;
   width: 100%;
   padding: 3px 24px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 
@@ -115,9 +122,15 @@ input:focus {
 }
 
 
-@media (min-width: 767px) {
-  section {
-    margin: 120px auto 233px;
-    padding: 0 32px;
+@media (max-width: 767px) {
+  .content {
+    width: 100%;
+    max-width: 400px;
+    margin-right: 32px;
+    margin-left: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
