--- a/style-landing.css
+++ b/style-landing.css
@@ -1,4 +1,4 @@
-html {
+* {
   font-family: Pretendard,"Abel", "Acme",sans-serif;
   word-break: keep-all;
 }
@@ -21,7 +21,6 @@ main {
 
 footer {
   background-color: var(--black);  
-  margin-top: 100px;
 }
 
 .nav,
@@ -122,7 +121,8 @@ footer {
   font-weight: 700;
   line-height: normal;
   letter-spacing: -3px;
-  margin: 0 0 10px 0;
+  margin-bottom: 10px;
+  white-space: nowrap;
 }
 
 .contents-text-gradient {
@@ -241,6 +241,7 @@ footer {
     max-width: 1000px;
     align-items: center;
     padding: 120px 0 50px;
+    gap: 20px;
   }
 
   .contents-image {
@@ -257,12 +258,16 @@ footer {
     white-space: nowrap;
   }
 
+  footer {
+    margin-top: 120px;
+    padding: 32px 104px 64px;
+  }
+
   .info {
     display: flex;
-    height: 120px;
+    height: 64px;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 32px 104px 64px;
   }
 
   .info-box {
@@ -346,11 +351,16 @@ footer {
     white-space: nowrap;
   }
 
+  footer {
+    margin-top: 120px;
+    padding: 32px 104px 64px;
+  }
+
   .info {
     display: flex;
+    height: 64px;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 32px 104px 64px;
   }
 
   .info-box {
@@ -405,45 +415,55 @@ footer {
   }
 
   .head-image {
-    padding-top: 55%;
+    width: 100%;
+    aspect-ratio: 1 / 0.55;
     background: linear-gradient(180deg, rgba(196, 196, 196, 0.00) 67.68%, #f0f6ff 125.4%),
     url('./images/img-main.svg');
     background-repeat: no-repeat;
     background-size: 105%;
     background-position-x: 50%;
-    background-position-y: -30%;
+    background-position-y: -20%;
     margin: 14px 11px 0;
   }
 
   .contents {
-    flex-direction: column;
+    flex-direction: column; 
     gap: 24px;
-    align-items: left;
     padding: 40px 32px 36px;
   }
 
-  .contents.reverse {
-    flex-direction: column-reverse;
+  .contents-textbox {
+    display: contents;
   }
-  
-  .contents-image {
-    width: 100%;
-    padding-top: 81.8%;
-  }
-   
+
   .contents-text-title {
     font-size: 24px;
+    order: 1;
+    margin: 0;
   }
 
   .contents-text-small {
     font-size: 15px;
+    order: 3;
+  }
+
+  .contents-image {
+    width: 100%;
+    padding-top: 81.8%;
+    order: 2;
+  }
+
+
+  footer {
+    margin-top: 120px;
+    padding: 32px;
   }
 
   .info {
     display: flex;
+    /* height: 96px; */
     align-items: flex-start;
     justify-content: space-between;
-    padding: 32px 32px 64px;
   }
   
   .info-box {
