로그인 시도를 하면 이메일 input 아래에 “이메일을 확인해 주세요.”, 비밀번호 input 아래에 “비밀번호를 확인해 주세요.” 에러 메세지를 보임

--- a/assets/css/pages/auth.css
+++ b/assets/css/pages/auth.css
@@ -85,7 +85,7 @@
   outline: 1px solid #6d6afe;
 }
 
-.auth-form__notice-enter-input {
+.auth-form__notice {
   margin-top: 6px;
   color: var(--red-color);
 }
