--- a/css/landing.css
+++ b/css/landing.css
@@ -72,7 +72,6 @@ header {
 .big-title {
   text-align: center;
   font-size: 56px;
-  font-weight: 700;
   display: block;
   line-height: 80px;
 }
@@ -117,12 +116,10 @@ header {
 
 .small-title {
   font-size: 48px;
-  font-weight: 700;
   letter-spacing: -0.3px;
 }
 .paragraph {
   font-size: 16px;
-  font-weight: 400;
   line-height: 150%;
 }
 .content-image {
@@ -205,8 +202,8 @@ a:visited {
     width: 750px;
   }
   .large-container img {
-    width: 900px;
-    height: 443px;
+    width: 700px;
+    height: 400px;
   }
   .footer-box {
     font-size: 13px;
@@ -245,7 +242,6 @@ a:visited {
   .content-image-mobile {
     display: block;
     width: 100%;
-    height: 100%;
   }
   .article {
     padding: 120px 32px 0;
@@ -291,6 +287,7 @@ a:visited {
   }
   h1.big-title {
     font-size: 48px;
+    line-height: 65px;
   }
   h2.small-title {
     font-size: 40px;
