--- a/css/sign.css
+++ b/css/sign.css
@@ -5,7 +5,7 @@ body {
 }
 .signin {
   display: flex;
-  padding: 238px 0px 253px 0px;
+  padding: 238px 0 253px;
   justify-content: center;
   align-items: center;
   background: #f0f6ff;
@@ -22,6 +22,7 @@ body {
 .signin-logo img {
   width: 210px;
   height: 38px;
+  display: block;
 }
 .question {
   font-size: 16px;
@@ -109,7 +110,7 @@ input::placeholder {
   }
   .signin {
     width: 100%;
-    padding: 238px 32px 253px 32px;
+    padding: 238px 32px 253px;
     justify-content: center;
     align-items: center;
     background: #f0f6ff;
