--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,8 @@ nav {
   width: 100%;
   height: 9.4rem;
   max-width: 192rem;
-  padding: 0 20rem;
+  padding: 0 5rem;
+  margin: auto;
 }
 
 header {
@@ -50,7 +51,7 @@ header {
   background-image: linear-gradient(135deg, var(--primary) 0%, #6ae3fe 100%);
   border-radius: 0.8rem;
   color: #f5f5f5;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
@@ -255,7 +256,8 @@ footer {
     height: 31.5rem;
   }
 
-}@media screen and (max-width: 767px) {
+}
+@media screen and (max-width: 767px) {
 
   nav {
     width: 100%;
@@ -380,5 +382,4 @@ footer {
     top: 0;
     right: 0;
   }
-
 }
