--- a/css/sign.css
+++ b/css/sign.css
@@ -89,10 +89,11 @@ header {
   border-color: var(--primary);
 }
 
-.eye-button {
+#eye-off{
   position: absolute;
   top: 50px;
   left: 93%;
+  cursor: pointer;
 }
 
 .cta {
@@ -179,4 +180,10 @@ header {
   font-weight: 400;
   font-size: 14px;
   line-height: 16.71px;
+}
+
+.binder {
+  width: 100%;
+  height: 60px;
+  position: relative;
 }
