--- a/assets/CSS/mobile.css
+++ b/assets/CSS/mobile.css
@@ -14,7 +14,7 @@
     width: 43.625rem;
   }
   
-  .headerimgtest { /*------------------------------------------------------------------------*/
+  .header-wrap__img {
     width: 40.64394rem;
   }
 
@@ -22,7 +22,7 @@
     gap: 0 51px;
   }
 
-  .contentimgtest { /*------------------------------------------------------------------------*/
+  .card-wrap__img {
     width: 24.0625rem;
     height: 19.6875rem;
   }
@@ -77,7 +77,7 @@
     padding: .625rem 1rem;
   }
 
-  .headerimgtest { /*------------------------------------------------------------------------*/
+  .header-wrap__img {
     width: 18.9245rem;
   } 
 
@@ -123,7 +123,7 @@
     /* grid-area: b; */
   }
 
-  .contentimgtest { /*------------------------------------------------------------------------*/
+  .card-wrap__img {
     width: 20.3125rem;
     height: 16.61931rem;
     /* grid-area: c; */
