로그인, 회원가입 페이지 눈 모양 아이콘 클릭시 비밀번호의 문자열이 보이기도 하고, 가려지기도 함

--- a/assets/css/pages/auth.css
+++ b/assets/css/pages/auth.css
@@ -63,11 +63,15 @@
   position: relative;
 }
 
-.auth-form__eye {
+.auth-form__eye-button {
   position: absolute;
   top: 22px;
   right: 22px;
-  cursor: pointer;
+}
+
+.auth-form__eye.eye--off {
+  position: relative;
+  top: 1px;
 }
 
 .auth-form__input {
